--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
+    "@types/react-dropzone": "^4.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^4.3.0",
+    "react-loader-spinner": "^2.3.0",
     "react-scripts": "3.0.1",
     "typescript": "3.5.2"
   },
